--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,12 +11,14 @@
     "@types/react-helmet": "^6.0.0",
     "emotion-normalize": "^10.1.0",
     "gatsby": "^2.23.12",
+    "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-emotion": "^4.3.10",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sharp": "^2.6.14",
+    "gatsby-source-filesystem": "^2.3.22",
     "gatsby-transformer-sharp": "^2.5.7",
     "palx": "^1.0.3",
     "prop-types": "^15.7.2",
