--- a/webapp/package.json
+++ b/webapp/package.json
@@ -21,9 +21,11 @@
     "gatsby-source-filesystem": "^2.3.22",
     "gatsby-transformer-sharp": "^2.5.7",
     "palx": "^1.0.3",
+    "pretty-bytes": "^5.4.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^11.0.3",
     "react-helmet": "^6.1.0",
     "sancho": "^3.5.6",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
