--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       - ./api:/go/src/api
     ports:
       - 8080:8080
+    env_file:
+      - ./api/.env.example
+      - ./api/.env
   webapp:
     build:
       context: ./webapp
@@ -18,3 +21,6 @@ services:
       - ./webapp/src:/usr/src/app/src
     ports:
       - 8000:8000
+    env_file:
+      - ./webapp/.env.example
+      - ./webapp/.env
