--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,5 +31,5 @@ jobs:
           # List of tags
           tags: |
             ${{ secrets.REGISTRY_IMAGE }}:latest
-            ${{ secrets.REGISTRY_IMAGE }}:${{ github.ref }}
+            ${{ secrets.REGISTRY_IMAGE }}:${GITHUB_REF##*/}
             ${{ secrets.REGISTRY_IMAGE }}:${{ github.sha }}
